# CCC

./: .gitignore  ACS.md  CLAUDE.md  GEMINI.md  Home.md  README.md  Vault-Guide.md  note.txt
.claude/agents/: CCC-Web-Researcher.md
.claude/commands/: ccc-product-research.md  deep-research.md  research-plan.md  workflow-feedback.md
.gemini/commands/: deep-research.md  research-plan.md
CCC/: Architecture.md  Debian-Blueprint-V8.md
CCC/AI-Workflows/: AI-Standards.md  search-item-template.md
CCC/Agents/: Agent.md
CCC/Framework/: Admiralty-Rating-Codes.md  (+11 more)
Research/Active-Projects/Deep-Research/hybrid-symbolic-neural-ai-architecture/Example-ACS/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
Research/Active-Projects/Deep-Research/hybrid-symbolic-neural-ai-architecture/Example-ACS/config/: acs-config.toml
Research/Active-Projects/Deep-Research/hybrid-symbolic-neural-ai-architecture/Example-ACS/docs/: behavioral-translation-guide.md
Research/Active-Projects/Deep-Research/hybrid-symbolic-neural-ai-architecture/Example-ACS/examples/: systematic_researcher.rs
Research/Active-Projects/Deep-Research/hybrid-symbolic-neural-ai-architecture/Example-ACS/src/: lib.rs
Research/Active-Projects/Deep-Research/hybrid-symbolic-neural-ai-architecture/Example-ACS/src/behavioral/: mod.rs  systematic_research.rs
Research/Active-Projects/Deep-Research/hybrid-symbolic-neural-ai-architecture/Example-ACS/src/coordination/: mod.rs
Research/Active-Projects/Deep-Research/hybrid-symbolic-neural-ai-architecture/Example-ACS/src/storage/: mod.rs
Templates/: Template-Guide.md
(+297 files in other folders)
